<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:layout_marginTop="16dp"
    android:gravity="center"
    tools:context=".CourseActivity">

    <LinearLayout
        android:id="@+id/linearlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@android:dimen/app_icon_size"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="#5D44F8"
            android:textSize="20sp"
            android:layout_marginTop="16dp"
            android:textStyle="italic"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:src="@drawable/graduate"
            android:id="@+id/header_image"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/oval"
            android:contentDescription="@string/todo"
            />

        <EditText
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/cname"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/course_name"/>

        <EditText
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/cCode"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="text"
            android:hint="@string/course_code"/>

        <EditText
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/cCredit"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:hint="@string/course_credit"/>

        <EditText
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/cSemister"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:hint="@string/course_semister"/>

        <EditText
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:id="@+id/cYear"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:inputType="number"
            android:hint="@string/course_year"/>

        <TextView
            android:id="@+id/txtselect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/select_programme"
            android:textSize="15sp"
            android:textStyle="bold" />

        <AutoCompleteTextView
            android:layout_width="264dp"
            android:layout_height="wrap_content"
            android:inputType="textAutoComplete"
            android:layout_marginBottom="16dp"
            android:id="@+id/programme"/>


    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/course_category"
                android:id="@+id/txtCategory"
                android:textSize="15sp"
                android:textStyle="bold"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/category">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/core"
                    android:text="@string/core"
                    />


                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/option"
                    android:text="@string/option"
                    />
            </RadioGroup>
    </LinearLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="20dp"
            android:text="@string/save_course"
            android:background="@drawable/round"/>


    </LinearLayout>

</ScrollView>